# python-game-2-md-8-mewwmarka

./: .gitignore  README.md  main.py  pyproject.toml
bubble_hunt/: config.py  game.py  value_objects.py
bubble_hunt/screen/: life.py
bubble_hunt/sprites/: factory.py  sprite.py
freezer/: game.py
freezer/screen/: life.py
main_game/: camera.py  game.py  peach.py
mur_tv/: config.py  game.py
utils/: colors.py  popups.py
