[tool.poetry]
name = "peach-life"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "peach_life"}]

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.5.2"
pydantic-settings = "^2.2.1"
pydantic = "^2.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
