[tool.poetry]
name = "Peach"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.5.2"
pydantic-settings = "^2.2.1"
pydantic = "^2.6.4"
opencv-python = "^4.9.0.80"
setuptools = "^69.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
